Footer and subfooter finished

--- a/src/main/webapp/searchview/stylesheet.css
+++ b/src/main/webapp/searchview/stylesheet.css
@@ -52,7 +52,7 @@ td {
 
 .subfooter {
     height: 500px;
-    background-image: url('../imageshomepage/subfooter.png');
+    background-color: #292F32;
     margin-top: 80px;
     
 }
